--- a/views/admin/index.jade
+++ b/views/admin/index.jade
@@ -1,4 +1,7 @@
-article.admin-page
-	header
-	div.post
-		p Admin Page
+extends ../admin_layout
+
+block content
+  article.admin-page
+    header
+    div.post
+      p Admin Page
