--- a/views/admin/posts/index.jade
+++ b/views/admin/posts/index.jade
@@ -1,16 +1,19 @@
-article.admin-page
-	header
-	div#admin-posts.post
-		- if (notice)
-			p =notice
+extends ../../admin_layout
 
-		a(href='/admin/posts/new') New post
+block content
+	article.admin-page
+		header
+		div#admin-posts.post
+			- if (notice)
+				p =notice
 
-		div.posts-list
-			ul
-				- each post in posts
-					li
-						h2
-							a(href='/admin/posts/' + post._id)!= post.title
-						div.meta
-							!= moment(post.date).format('LL')
+			a(href='/admin/posts/new') New post
+
+			div.posts-list
+				ul
+					- each post in posts
+						li
+							h2
+								a(href='/admin/posts/' + post._id)!= post.title
+							div.meta
+								!= moment(post.date).format('LL')
