--- a/views/menu_admin.jade
+++ b/views/menu_admin.jade
@@ -8,7 +8,9 @@ div
 				li 
 					a(href='/media') Media
 				li 
-					a(href='/admin/messages') Mensagens 
+					a(href='/admin/messages') Messages 
+				li
+					a(href='/admin/projects') Projects
 				li 
 					a(href='/logout') 
 						| <span class="icon">v</span>
