--- a/views/posts/new.jade
+++ b/views/posts/new.jade
@@ -1,7 +1,10 @@
-article
-	header
-	div.post
-		- if (notice)
-			p =notice
-		form#new-post-form(name='post', method='post', action='/admin/posts')
-			!=partial('post_form', {post:post})
+extends ../admin_layout
+
+block content
+  article
+    header
+    div.post
+      - if (notice)
+        p =notice
+      form#new-post-form(name='post', method='post', action='/admin/posts')
+        include post_form
