--- a/views/admin/posts.jade
+++ b/views/admin/posts.jade
@@ -1,4 +1,7 @@
-article
-	header
-	div.post
-		p Admin Page
+extends ../admin_layout
+
+block content
+  article
+  	header
+  	div.post
+  		p Admin Page
