--- a/views/apps/index.jade
+++ b/views/apps/index.jade
@@ -1,4 +1,7 @@
-article
-	header
-	div.content
-		p Aplicativos
+extends ../layout
+
+block content
+  article
+  	header
+  	div.content
+  		p Aplicativos
