--- a/views/media/new.jade
+++ b/views/media/new.jade
@@ -1,4 +1,7 @@
-article
-	header
-	div.post
-		p New Media
+extends ../admin_layout
+
+block content
+  article
+  	header
+  	div.post
+  		p New Media
