--- a/views/admin/projects/index.jade
+++ b/views/admin/projects/index.jade
@@ -3,7 +3,7 @@ extends ../../admin_layout
 block content
   article.admin-page
     header
-    div#admin-projects.page
+    div.page
       - if (notice)
         p =notice
 
