--- a/views/admin/projects/project_form.jade
+++ b/views/admin/projects/project_form.jade
@@ -6,6 +6,8 @@ fieldset.input-field
 fieldset.input-field
   input.field(name='project[project_image_url]', placeholder='Project Image Link', type='text',value=project.project_image_url)
 fieldset.input-field
+  input.field(name='project[download_link]', placeholder='Download Link', type='text',value=project.download_link)
+fieldset.input-field
   input.field(name='project[ios_app_store_link]', placeholder='iOS App Store Link', type='text',value=project.ios_app_store_link)
 fieldset.input-field
   input.field(name='project[mac_app_store_link]', placeholder='Mac App Store Link', type='text',value=project.mac_app_store_link)
