--- a/views/menu_admin.jade
+++ b/views/menu_admin.jade
@@ -6,7 +6,7 @@ div
 				li 
 					a(href='/admin/posts') Posts  
 				li 
-					a(href='/media') Media
+					a(href='/admin/media') Media
 				li 
 					a(href='/admin/messages') Messages 
 				li
