--- a/views/blog/show.jade
+++ b/views/blog/show.jade
@@ -3,7 +3,7 @@ extends ../layout
 block content
 	div.blog
 		header
-			!=partial('search_field')
+			include 'search_field'
 				
 		article.post
 			h2= post.title
@@ -11,7 +11,7 @@ block content
 				!= moment(post.date).format('LL')
 				a.author(href='/sobre')
 					img(src='/img/about/gui.png', width='68', height='68')
-			!= partial('post_tags', {post : post})
+			include 'post_tags'
 			div.article_content
 				!= md.parse(post.body)
 			
