--- a/views/post_tags.jade
+++ b/views/post_tags.jade
@@ -2,5 +2,5 @@
 	ul#tags.tags
 		- each tag in post.tags.split(',')
 			li
-				a(href='/search?tag=' + TrimStr(tag))!= TrimStr(tag)
+				a(href='/search?tag=' + TrimStr(tag), rel='prerender')!= TrimStr(tag)
 		
