--- a/assets/css/app2.css
+++ b/assets/css/app2.css
@@ -170,11 +170,11 @@ a:active {
 }
 
 
+
 .site-page {
 	margin: 0px;
   padding: 0px;
-  background-image: url(/img/bgptr.jpg);
-  background-repeat: repeat;
+  background-color: #213D5F;
 }
 
 
@@ -262,9 +262,9 @@ a:active {
   font-size: 14px;
   padding: 4px 15px;
   outline: none;
-  -webkit-box-shadow: inset 0px 0px 20px rgba(0, 0, 0, .3), 0px 1px 0px rgba(255, 255, 255, 0.1);
+  /*-webkit-box-shadow: inset 0px 0px 20px rgba(0, 0, 0, .3), 0px 1px 0px rgba(255, 255, 255, 0.1);
   -moz-box-shadow: inset 0px 0px 20px rgba(0, 0, 0, .3), 0px 1px 0px rgba(255, 255, 255, 0.1);
-  box-shadow: inset 0px 0px 20px rgba(0, 0, 0, .3), 0px 1px 0px rgba(255, 255, 255, 0.1);
+  box-shadow: inset 0px 0px 20px rgba(0, 0, 0, .3), 0px 1px 0px rgba(255, 255, 255, 0.1);*/
 }
 
 .menu #search-button{
@@ -385,9 +385,9 @@ site-page .blog header h1{
   font-size: 1.6em;
   line-height: 1.4em;
   margin-bottom: 1.6em;
-  -webkit-box-shadow: 0px 10px 30px rgba(0,0,0, 0.8);
+  /*-webkit-box-shadow: 0px 10px 30px rgba(0,0,0, 0.8);
   -moz-box-shadow: 0px 10px 30px rgba(0,0,0, 0.8);
-  box-shadow: 0px 10px 30px rgba(0,0,0, 0.8);
+  box-shadow: 0px 10px 30px rgba(0,0,0, 0.8);*/
 }
 
 .post h2 a{
@@ -433,9 +433,9 @@ site-page .blog header h1{
   font-size: 1.6em;
   line-height: 1.4em;
   margin-bottom: 1.6em;
-  -webkit-box-shadow: 0px 10px 30px rgba(0,0,0, 0.8);
+  /*-webkit-box-shadow: 0px 10px 30px rgba(0,0,0, 0.8);
   -moz-box-shadow: 0px 10px 30px rgba(0,0,0, 0.8);
-  box-shadow: 0px 10px 30px rgba(0,0,0, 0.8);
+  box-shadow: 0px 10px 30px rgba(0,0,0, 0.8);*/
 }
 
 .page h2 a{
@@ -491,9 +491,9 @@ site-page .blog header h1{
   font-size: 1em;
   color: #272822;
   border: 1px solid #CCC;
-  -webkit-box-shadow: inset 0 1px 0 #EEE,white 0 1px 0;
+  /*-webkit-box-shadow: inset 0 1px 0 #EEE,white 0 1px 0;
   -moz-box-shadow: inset 0 1px 0 #eee,#fff 0 1px 0;
-  box-shadow: inset 0 1px 0 #EEE,white 0 1px 0;
+  box-shadow: inset 0 1px 0 #EEE,white 0 1px 0;*/
   display: inline-block;
   margin: 0;
   outline: none;
@@ -516,9 +516,6 @@ site-page .blog header h1{
   line-height: 18px;
   height: 30px;
   width: 90px;
-  -webkit-box-shadow: 0 1px 0 white;
-  -moz-box-shadow: 0 1px 0 #fff;
-  box-shadow: 0 1px 0 white;
   color: white;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, .25);
   background-color: #019AD2;
@@ -532,9 +529,9 @@ site-page .blog header h1{
   background-image: linear-gradient(#33BCEF,#019AD2);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#33bcef',endColorstr='#019ad2',GradientType=0);
   border-color: #057ED0;
-  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, .1);
+  /*-webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, .1);
   -moz-box-shadow: inset 0 1px 0 rgba(255,255,255,.1);
-  box-shadow: inset 0 1px 0 rgba(255, 255, 255, .1);
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, .1);*/
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
@@ -550,9 +547,6 @@ site-page .blog header h1{
   font-size: 13px;
   font-weight: bold;
   line-height: 18px;
-  -webkit-box-shadow: 0 1px 0 white;
-  -moz-box-shadow: 0 1px 0 #fff;
-  box-shadow: 0 1px 0 white;
   color: white;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, .25);
   background-color: #019AD2;
@@ -566,9 +560,9 @@ site-page .blog header h1{
   background-image: linear-gradient(#ECECEC,#BBB);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ECECEC',endColorstr='#BBB',GradientType=0);
   border-color: #CACACA;
-  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, .1);
+  /*-webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, .1);
   -moz-box-shadow: inset 0 1px 0 rgba(255,255,255,.1);
-  box-shadow: inset 0 1px 0 rgba(255, 255, 255, .1);
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, .1);*/
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
@@ -587,9 +581,6 @@ site-page .blog header h1{
   line-height: 18px;
   height: 30px;
   width: 90px;
-  -webkit-box-shadow: 0 1px 0 white;
-  -moz-box-shadow: 0 1px 0 #fff;
-  box-shadow: 0 1px 0 white;
   color: white;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, .25);
   background-color: #EB1818;
@@ -603,9 +594,9 @@ site-page .blog header h1{
   background-image: linear-gradient(#EB1818,#AF4A4A);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#EB1818',endColorstr='#AF4A4A',GradientType=0);
   border-color: #B44343;
-  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, .1);
+  /*-webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, .1);
   -moz-box-shadow: inset 0 1px 0 rgba(255,255,255,.1);
-  box-shadow: inset 0 1px 0 rgba(255, 255, 255, .1);
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, .1);*/
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
@@ -661,9 +652,9 @@ site-page .blog header h1{
   -webkit-border-radius: 50%;
   border-radius: 50%;
   border: 1px solid rgba(0, 0, 0, 0.3);
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.2);
+  /*-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.2);
   -moz-box-shadow: inset 0 1px 1px rgba(0,0,0,0.2);
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.2);*/
 }
 
 .post p.meta a.author::after {
@@ -676,9 +667,9 @@ site-page .blog header h1{
   background-image: -webkit-gradient(linear, left top, left bottom, from(white), to(#EEE));
   background-image: -moz-linear-gradient(top, white, #EEE);
   background-image: -o-linear-gradient(top, white, #EEE);
-  -webkit-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.3),0 0 2px rgba(0, 0, 0, 0.5);
+  /*-webkit-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.3),0 0 2px rgba(0, 0, 0, 0.5);
   -moz-box-shadow: 0 2px 3px rgba(0,0,0,0.3),0 0 2px rgba(0,0,0,0.5);
-  box-shadow: 0 2px 3px rgba(0, 0, 0, 0.3),0 0 2px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 2px 3px rgba(0, 0, 0, 0.3),0 0 2px rgba(0, 0, 0, 0.5);*/
   -moz-border-radius: 50%;
   -webkit-border-radius: 50%;
   border-radius: 50%;
@@ -710,9 +701,9 @@ site-page .blog header h1{
   -moz-border-radius: 50%;
   -webkit-border-radius: 50%;
   border-radius: 50%;
-  -webkit-box-shadow: none;
+  /*-webkit-box-shadow: none;
   -moz-box-shadow: none;
-  box-shadow: none;
+  box-shadow: none;*/
 
 }
 
@@ -753,9 +744,9 @@ site-page .blog header h1{
   -moz-border-radius: 3px;
   border-radius: 3px;
   word-wrap: break-word;
-  -webkit-box-shadow: 0px 10px 30px rgba(0,0,0, 0.8);
+  /*-webkit-box-shadow: 0px 10px 30px rgba(0,0,0, 0.8);
   -moz-box-shadow: 0px 10px 30px rgba(0,0,0, 0.8);
-  box-shadow: 0px 10px 30px rgba(0,0,0, 0.8);
+  box-shadow: 0px 10px 30px rgba(0,0,0, 0.8);*/
   padding: 2px 10px 10px 10px;
 }
 .side_bar h2{
@@ -805,8 +796,8 @@ site-page .blog header h1{
   padding: 0 15px 0 25px;
   height: 25px;
   line-height: 25px;
-  -webkit-box-shadow: 0px 1px 1px 1px rgba(0, 0, 0, 0.1);
-  box-shadow: 0px 1px 1px 1px rgba(0, 0, 0, 0.1);
+  /*-webkit-box-shadow: 0px 1px 1px 1px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 1px 1px 1px rgba(0, 0, 0, 0.1);*/
   -webkit-border-radius: 2px;
   -moz-border-radius: 2px;
   -ms-border-radius: 2px;
@@ -887,9 +878,9 @@ site-page .blog header h1{
   font-size: 1.6em;
   line-height: 1.4em;
   margin-bottom: 0px;
-  -webkit-box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.8);
+  /*-webkit-box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.8);
   -moz-box-shadow: 0px 2px 10px rgba(0,0,0, 0.8);
-  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.8);
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.8);*/
 }
 
 #about-profile-area #image{
@@ -933,9 +924,9 @@ article#about #contact-form-area{
   margin-top: -22px;
   margin-left: 24%;
   margin-right: 190px;
-  -webkit-box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.8);
+  /*-webkit-box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.8);
   -moz-box-shadow: 0px 2px 10px rgba(0,0,0, 0.8);
-  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.8);
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.8);*/
   color: #585858;
   font-size: 14px;
   width: 370px;
@@ -985,9 +976,9 @@ article#about #contact-footer{
   font-size: 1.6em;
   line-height: 1.4em;
   margin-bottom: 1.6em;
-  -webkit-box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.8);
+  /*-webkit-box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.8);
   -moz-box-shadow: 0px 2px 10px rgba(0,0,0, 0.8);
-  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.8);
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.8);*/
 }
 
 
@@ -1040,9 +1031,9 @@ article#projects #project.content{
   font-size: 1.6em;
   line-height: 1.4em;
   margin-bottom: 1.6em;
-  -webkit-box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.8);
+  /*-webkit-box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.8);
   -moz-box-shadow: 0px 2px 10px rgba(0,0,0, 0.8);
-  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.8);
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.8);*/
 }
 
 article#projects .project-image{
@@ -1113,7 +1104,6 @@ article#projects .project-description #stores li{
 
   article#about #contact-form-area {
     background: none repeat scroll 0 0 #F5F5F5;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.8);
     color: #585858;
     font-size: 14px;
     margin-left: 0px;
@@ -1126,7 +1116,6 @@ article#projects .project-description #stores li{
   #about-profile-area {
     background: none repeat scroll 0 0 white;
     border-radius: 3px 3px 0 0;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.8);
     color: black;
     font-size: 1.6em;
     height: 440px;
