--- a/views/layout.jade
+++ b/views/layout.jade
@@ -13,10 +13,10 @@ html(lang="en")
 		| <![endif]-->
 		!= css('raphaelicons')
 		!= css('http://releases.flowplayer.org/5.0.0/skin/minimalist.css')
+		!= css('http://fonts.googleapis.com/css?family=Open+Sans:400,700')
 		!= css('prettify')
 		!= js('jquery-1.7.2.min')
 		!= js('underscore-min')
-		!= js('http://releases.flowplayer.org/5.0.0/flowplayer.min.js')
 		!= js('prettify')
 		!= js('app')
 		block head
