Font changed to open sans in admin area

--- a/views/admin_layout.jade
+++ b/views/admin_layout.jade
@@ -4,6 +4,7 @@ html(lang="en")
 		title= pageTitle
 		meta(charset='UTF-8')
 		meta(name="apple-mobile-web-app-capable", content="yes")
+		!= css('http://fonts.googleapis.com/css?family=Open+Sans:400,700')
 		!= css('app2')
 		!= css('prettify')
 		| <!--[if lte IE 8]>
