--- a/assets/css/app2.css
+++ b/assets/css/app2.css
@@ -32,7 +32,8 @@ html {
 
 
 html,body {
-  font-family: 'Open Sans', sans-serif;
+  /*font-family: 'Open Sans', sans-serif;*/
+  font-family: 'Lato', sans-serif;
   height:100%;
   width:100%;
   font-size: 10px;
@@ -52,7 +53,8 @@ select {
 
 body, input, submit, textarea {
   /*font-family: "MuseoSans-300", arial, sans-serif;*/
-  font-family: 'Open Sans', sans-serif;
+  /*font-family: 'Open Sans', sans-serif;*/
+  font-family: 'Lato', sans-serif;
   -webkit-overflow-scrolling: touch;
 }
 
@@ -118,7 +120,7 @@ a:active {
   margin: 54px 0 0;
   text-shadow: 0 1px 0 rgba(0, 0, 0, 0.5);
   /*font-family: "MuseoSans-100", arial, sans-serif;*/
- 
+  font-weight: 300;
 }
 
 .site-header ul.menu{
@@ -237,6 +239,7 @@ site-page .blog header h1{
 .site-page .blog .post h2{
   font-size: 1.3em;
   margin-bottom: 0px;
+  font-weight: 300;
 }
 
 
@@ -298,8 +301,9 @@ site-page .blog header h1{
   position: relative;
   min-height: 153px;
   word-wrap: break-word;
-  font-size: 1.6em;
-  line-height: 1.4em;
+  font-size: 18px;
+  font-weight: 300;
+  /*line-height: 1.4em;*/
   margin-bottom: 1.6em;
   /*-webkit-box-shadow: 0px 10px 30px rgba(0,0,0, 0.8);
   -moz-box-shadow: 0px 10px 30px rgba(0,0,0, 0.8);
@@ -308,12 +312,12 @@ site-page .blog header h1{
 
 .post h2 a{
   color: #616161;
+  font-weight: 300;
+  font-size: 24px;
 }
 
 .post a{
   color: #4175c6;
-  font-weight: bold;
-  font-size: 0.9em;
 }
 
 .post a:hover{
@@ -421,7 +425,7 @@ site-page .blog header h1{
 }
 
 .button-normal{
-  font-family: 'Open Sans', sans-serif;
+  /*font-family: 'Open Sans', sans-serif;*/
   border: 1px solid #CCC;
   position: relative;
   display: inline-block;
@@ -454,7 +458,7 @@ site-page .blog header h1{
 }
 
 .button-edit{
-  font-family: 'Open Sans', sans-serif;
+  /*font-family: 'Open Sans', sans-serif;*/
   border: 1px solid #CCC;
   position: relative;
   display: inline-block;
@@ -486,7 +490,7 @@ site-page .blog header h1{
 }
 
 .button-delete{
-  font-family: 'Open Sans', sans-serif;
+  /*font-family: 'Open Sans', sans-serif;*/
   border: 1px solid #CCC;
   position: relative;
   display: inline-block;
