--- a/themes/default/views/common_head.jade
+++ b/themes/default/views/common_head.jade
@@ -8,6 +8,6 @@ meta(http-equiv="X-UA-Compatible", content="chrome=1")
 | <![endif]-->
 != css('css/style.css')
 | <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Lato:300,400,700'>
-!= js('jquery-1.7.2.min')
-!= js('app')
+!= js('js/jquery-1.7.2.min')
+!= js('js/app')
 block head
