--- a/themes/default/views/common_head.jade
+++ b/themes/default/views/common_head.jade
@@ -6,7 +6,7 @@ meta(http-equiv="X-UA-Compatible", content="chrome=1")
 
 | <!--[if lte IE 9]>
 | <![endif]-->
-!= css('css/style.css')
+!= css('css/style')
 | <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Lato:300,400,700'>
 != js('js/jquery-1.7.2.min')
 != js('js/app')
